pelican/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: panel
  namespace: pelican
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: panel
  template:
    metadata:
      labels:
        app: panel
    spec:
      containers:
        - name: panel
          image: ghcr.io/pelican-dev/panel:latest@sha256:134f1229738d59b4a24e07acc445e334364a9a35b68234fe4615fa68dec3c05f
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: data
              mountPath: /pelican-data
            - name: logs
              mountPath: /var/www/html/storage/logs
          livenessProbe:
            httpGet:
              path: /up
              port: 80
            initialDelaySeconds: 30
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /up
              port: 80
            initialDelaySeconds: 15
            periodSeconds: 10
          resources:
            limits:
              memory: "640Mi"
              cpu: "750m"
            requests:
              memory: "128Mi"
              cpu: "50m"
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: pelican-data
        - name: logs
          persistentVolumeClaim:
            claimName: pelican-logs
---
apiVersion: v1
kind: Service
metadata:
  name: panel
  namespace: pelican
spec:
  type: NodePort
  selector:
    app: panel
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30180
